--- a/Marchen/Views/Base.lproj/Main.storyboard
+++ b/Marchen/Views/Base.lproj/Main.storyboard
@@ -49,8 +49,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Qpx-9M-5HN" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ke3-wF-XFY">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Ke3-wF-XFY">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -86,7 +86,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="New Lyric" id="kj8-G4-bYN">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="dOw-QG-NsY"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="dOw-QG-NsY">
+                            <connections>
+                                <action selector="saveButtonClicked:" destination="Ujp-Yt-C3b" id="E7J-sF-aFH"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZcV-cp-WEZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
