--- a/Marchen/Views/LyricLineTableViewCell.xib
+++ b/Marchen/Views/LyricLineTableViewCell.xib
@@ -19,9 +19,9 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UnderlineImage" translatesAutoresizingMaskIntoConstraints="NO" id="Pf0-EH-dG0">
                         <rect key="frame" x="0.0" y="0.0" width="210" height="39"/>
                     </imageView>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="When I was" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LVj-E7-2xy">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LVj-E7-2xy">
                         <rect key="frame" x="20" y="0.0" width="170" height="39"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                 </subviews>
@@ -37,6 +37,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="lyricTextField" destination="LVj-E7-2xy" id="eYc-Ip-kos"/>
+            </connections>
             <point key="canvasLocation" x="55.072463768115945" y="150.33482142857142"/>
         </tableViewCell>
     </objects>
