--- a/Marchen/Views/ChordTableViewCell.xib
+++ b/Marchen/Views/ChordTableViewCell.xib
@@ -16,27 +16,20 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yKE-gM-Sge">
-                        <rect key="frame" x="5" y="5" width="310" height="30"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yKE-gM-Sge">
+                        <rect key="frame" x="5" y="5" width="310" height="34"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZu-8O-kys">
-                                <rect key="frame" x="10" y="0.0" width="250" height="30"/>
+                                <rect key="frame" x="0.0" y="0.0" width="155" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lc3-ud-1FM">
-                                <rect key="frame" x="260" y="0.0" width="50" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="iif-Mm-zE1"/>
-                                    <constraint firstAttribute="width" constant="50" id="qfv-oi-IPD"/>
-                                </constraints>
+                                <rect key="frame" x="155" y="0.0" width="155" height="34"/>
                                 <state key="normal" title="Button"/>
                             </button>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="zZu-8O-kys" firstAttribute="leading" secondItem="yKE-gM-Sge" secondAttribute="leading" constant="10" id="bJy-c1-4UB"/>
-                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
