Storyboard button image update.

--- a/Marchen/Views/ChordTableViewCell.xib
+++ b/Marchen/Views/ChordTableViewCell.xib
@@ -16,20 +16,33 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yKE-gM-Sge">
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yKE-gM-Sge">
                         <rect key="frame" x="5" y="5" width="310" height="34"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZu-8O-kys">
-                                <rect key="frame" x="0.0" y="0.0" width="155" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZu-8O-kys" customClass="PaddedLabel" customModule="Marchen" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="276" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="inset">
+                                        <size key="value" width="20" height="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lc3-ud-1FM">
-                                <rect key="frame" x="155" y="0.0" width="155" height="34"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lc3-ud-1FM">
+                                <rect key="frame" x="276" y="0.0" width="34" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="lc3-ud-1FM" secondAttribute="height" multiplier="1:1" id="vuO-Zh-zdb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="8" maxY="0.0"/>
+                                <state key="normal" image="play.circle" catalog="system"/>
                             </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="zZu-8O-kys" firstAttribute="height" secondItem="lc3-ud-1FM" secondAttribute="height" id="4MG-UX-I4v"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
@@ -47,4 +60,7 @@
             <point key="canvasLocation" x="138" y="153"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="play.circle" catalog="system" width="128" height="121"/>
+    </resources>
 </document>
