--- a/Marchen/Views/ChordTableViewCell.xib
+++ b/Marchen/Views/ChordTableViewCell.xib
@@ -38,6 +38,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="8" maxY="0.0"/>
                                 <state key="normal" image="play.circle" catalog="system"/>
+                                <connections>
+                                    <action selector="playButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="WvW-xC-iZh"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
